Added spotify track to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,7 +46,7 @@ tm_color_gray=colour236
 tm_color_orange=colour209
 tm_color_spotify=colour83
 #scripts
-#tm_spotify="#[fg=$tm_color_spotify]#(osascript ~/tmux/spotify.scpt)"
+tm_spotify="#[fg=$tm_color_spotify]#(osascript ~/.dotfiles/tmux/spotify.scpt)"
 
 # status line
 set -g status-utf8 on
