Added some useful key bindings
r             - reload config
alt-direction - change pane without prefix
<prefix>-hjkl - change pane like vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,21 +7,35 @@ set -g base-index 1
 # start with pane at 1
 set -g pane-base-index 1
 
-# set prefix to ^s
-set -g prefix C-s
+# remap prefix from 'C-b' to 'C-s'
+unbind C-b
+set-option -g prefix C-s
+bind-key C-s send-prefix
+
+# split panes using | and -
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# create panes and windows in same working directory
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # act like vi
-#setw -g mode-keys vi
-#bind h select-pane -L
-#bind j select-pane -D
-#bind k select-pane -U
-#bind l select-pane -R
+setw -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-# mouse mode
-#set -g mode-mouse on
-#set -g mouse-resize-pane on
-#set -g mouse-select-pane on
-#set -g mouse-select-window on
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Enable mouse mode (tmux 2.1 and above)
+set -g mouse on
 
 # paste like vim in copy mode
 #unbind p
@@ -29,14 +43,8 @@ set -g prefix C-s
 #bind-key -t vi-copy 'v' begin-selection
 #bind-key -t vi-copy 'y' copy-selection
 
-# create panes and windows in same working directory
-#bind % split-window -h -c "#{pane_current_path}"
-#bind '"' split-window -c "#{pane_current_path}"
-#bind c new-window -c "#{pane_current_path}"
-
-#
-# Theming
-#
+# reload config file
+bind r source-file ~/.tmux.conf
 
 #colors
 tm_color_blue=colour75
@@ -45,6 +53,7 @@ tm_color_lightgray=colour244
 tm_color_gray=colour236
 tm_color_orange=colour209
 tm_color_spotify=colour83
+
 #scripts
 tm_spotify="#[fg=$tm_color_spotify]#(osascript ~/.dotfiles/tmux/spotify.scpt)"
 
@@ -67,4 +76,4 @@ set -g status-right-length 150
 set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | %a %d %b %H:%M "
 
 # plugins
-# run-shell ~/tmux/battery/battery.tmux
+run-shell ~/.dotfiles/tmux/battery/battery.tmux
