Added confirmation message to configuration reload

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,7 @@ set -g mouse on
 #bind-key -t vi-copy 'y' copy-selection
 
 # reload config file
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
 
 #colors
 tm_color_blue=colour75
