Mouse mode off, utf8 bar, OSX copy paste support

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,18 @@ set -g base-index 1
 # start with pane at 1
 set -g pane-base-index 1
 
+# UTF-8
+set-option -g status-utf8 on
+
+# #supposedly fixes pausing in vim
+set-option -sg escape-time 1
+
+# Set a decent history limit
+set -g history-limit 10000
+
+# sane scrolling
+set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
 # remap prefix from 'C-b' to 'C-s'
 unbind C-b
 set-option -g prefix C-s
@@ -34,14 +46,21 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
+# Control mouse mode (tmux 2.1 and above)
+# Prevents copy and paste etc when its on
+# Pretty cool http://stackoverflow.com/a/17725598/769237
+set -g mouse off
 
 # paste like vim in copy mode
 #unbind p
 #bind p paste-buffer
 #bind-key -t vi-copy 'v' begin-selection
 #bind-key -t vi-copy 'y' copy-selection
+
+# OSX Clipboard support
+# set-option -g default-command "reattach-to-user-namespace -l sh"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
