--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@ set -g pane-base-index 1
 # UTF-8
 set-option -g status-utf8 on
 
-# #supposedly fixes pausing in vim
-set-option -sg escape-time 1
+# Supposedly fixes pausing in vim
+set-option -sg escape-time 0
 
 # Set a decent history limit
 set -g history-limit 10000
@@ -47,9 +47,8 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # Control mouse mode (tmux 2.1 and above)
-# Prevents copy and paste etc when its on
 # Pretty cool http://stackoverflow.com/a/17725598/769237
-set -g mouse off
+set -g mouse on
 
 # paste like vim in copy mode
 #unbind p
