Added weather and scrolling tweaks

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,9 @@ set -g default-terminal "screen-256color"
 # start with window at 1
 set -g base-index 1
 
+# renumber windows when one is closed
+set-option -g renumber-windows on
+
 # start with pane at 1
 set -g pane-base-index 1
 
@@ -49,15 +52,22 @@ bind -n M-Down select-pane -D
 # Control mouse mode (tmux 2.1 and above)
 # Pretty cool http://stackoverflow.com/a/17725598/769237
 set -g mouse on
+# bind -n WheelUpPane copy-mode
 
 # paste like vim in copy mode
-#unbind p
-#bind p paste-buffer
-#bind-key -t vi-copy 'v' begin-selection
-#bind-key -t vi-copy 'y' copy-selection
+# unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
+# http://unix.stackexchange.com/questions/26548/write-all-tmux-scrollback-to-a-file?newreg=7cee11daa36347119dd77b3400e6d0e2
+bind-key P command-prompt -p 'Save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 
 # OSX Clipboard support
 # set-option -g default-command "reattach-to-user-namespace -l sh"
+set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
@@ -74,6 +84,7 @@ tm_color_spotify=colour83
 
 #scripts
 tm_spotify="#[fg=$tm_color_spotify]#(osascript ~/.dotfiles/tmux/spotify.scpt)"
+tm_weather="#(ansiweather -l London,GB -u metric -s true -f 1 -a false | sed 's/London forecast => //')"
 
 # status line
 set -g status-utf8 on
@@ -91,7 +102,9 @@ setw -g window-status-current-format "#[fg=$tm_color_orange]#[bg=$tm_color_gray]
 set -g status-left "#[fg=$tm_color_blue] #S "
 # Info on right
 set -g status-right-length 150
-set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | %a %d %b %H:%M "
+# set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | %a %d %b %H:%M "
+set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | %H:%M$tm_weather"
 
 # plugins
 run-shell ~/.dotfiles/tmux/battery/battery.tmux
+
