--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -108,3 +108,16 @@ set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percenta
 # plugins
 run-shell ~/.dotfiles/tmux/battery/battery.tmux
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
