--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -99,7 +99,7 @@ set -g status-left "#[fg=$tm_color_blue] #S "
 # Info on right
 set -g status-right-length 150
 # set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | %a %d %b %H:%M "
-set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | %H:%M$tm_weather"
+set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | #(TZ=America/New_York date +%%H:%%M) NYC | %H:%M LON |$tm_weather"
 
 # plugins
 run-shell ~/.dotfiles/tmux/battery/battery.tmux
