Fixed fonts symlink

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,8 +56,8 @@ set -g mouse on
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
 
 # http://unix.stackexchange.com/questions/26548/write-all-tmux-scrollback-to-a-file?newreg=7cee11daa36347119dd77b3400e6d0e2
 bind-key P command-prompt -p 'Save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
@@ -107,6 +107,7 @@ run-shell ~/.dotfiles/tmux/battery/battery.tmux
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Other examples:
