Configured session restore. Might have broken spotify

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -64,7 +64,8 @@ bind-key P command-prompt -p 'Save history to filename:' -I '~/tmux.history' 'ca
 
 # OSX Clipboard support
 # set-option -g default-command "reattach-to-user-namespace -l sh"
-set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+set -g default-command "reattach-to-user-namespace -l $SHELL"
+# set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
@@ -72,11 +73,11 @@ bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
 
 #colors
-tm_color_blue=colour75
+tm_color_blue=colour4
 tm_color_cream=colour230
 tm_color_lightgray=colour244
 tm_color_gray=colour236
-tm_color_orange=colour209
+tm_color_orange=colour215
 tm_color_spotify=colour83
 
 #scripts
@@ -109,6 +110,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -118,3 +120,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-save-shell-history 'on'
+set -g @resurrect-capture-pane-contents 'on'
