--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -73,6 +73,7 @@
 	whitespace = space-before-tab,indent-with-non-tab,trailing-space
 	editor = vim
 	pager = diff-so-fancy | less --tabs=4 -RFX
+	preloadindex = true
 [color]
 	# Use colors in Git commands that are capable of colored output when outputting to the terminal
 	ui = auto
@@ -108,3 +109,5 @@
 	prune = true
 [help]
 	autoCorrect = -1
+[gc]
+	auto = 256
