Turned save shell history off

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -121,5 +121,5 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 run '~/.tmux/plugins/tpm/tpm'
 
 set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-save-shell-history 'on'
+# set -g @resurrect-save-shell-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
