--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -34,11 +34,25 @@ bind '"' split-window -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # act like vi
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# setw -g mode-keys vi
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# Shift vimkeys to switch windows
+bind -n M-S-h previous-window
+bind -n M-S-l next-window
+
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
