--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -114,7 +114,7 @@ set -g status-left "#[fg=$tm_color_blue] #S "
 # Info on right
 set -g status-right-length 150
 # set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | %a %d %b %H:%M "
-set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | #(TZ=America/New_York date +%%H:%%M) NYC | %H:%M LON |$tm_weather"
+set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | #(TZ=America/New_York date +%%H:%%M) NYC | #(TZ=Europe/London date +%%H:%%M) LON |$tm_weather"
 
 set-option -g set-titles on
 set-option -g set-titles-string "#{session_name} - #{host}"
