--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
 # improve colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # start with window at 1
 set -g base-index 1
@@ -100,20 +100,18 @@ tm_weather="#(ansiweather -l London,GB -u metric -s true -f 1 -a false | sed 's/
 
 # status line
 set -g status-justify left
-#set -g status-bg colour24 # murky blue
-set -g status-bg $tm_color_gray # base16 gray almost
+set -g status-bg default
 set -g status-fg white
 set -g status-interval 4
 
 # window status
-setw -g window-status-format "#[fg=$tm_color_lightgray]#[bg=$tm_color_gray] #I#[fg=$tm_color_lightgray]#[bg=$tm_color_gray] #W "
-setw -g window-status-current-format "#[fg=$tm_color_orange]#[bg=$tm_color_gray] #I#[fg=$tm_color_orange]#[bg=$tm_color_gray] #W "
+setw -g window-status-format "#[fg=$tm_color_lightgray]#[bg=default] #I#[fg=$tm_color_lightgray]#[bg=default] #W "
+setw -g window-status-current-format "#[fg=$tm_color_orange]#[bg=$tm_color_white] #I#[fg=$tm_color_orange]#[bg=default] #W "
 
 # Info on left (no session display)
 set -g status-left "#[fg=$tm_color_blue] #S "
 # Info on right
 set -g status-right-length 150
-# set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | %a %d %b %H:%M "
 set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | #(TZ=America/New_York date +%%H:%%M) NYC | #(TZ=Europe/London date +%%H:%%M) LON |$tm_weather"
 
 set-option -g set-titles on
@@ -125,11 +123,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
