Set escape-time properly, maybe?

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,7 @@ set -g pane-base-index 1
 
 # Supposedly fixes pausing in vim
 set-option -sg escape-time 0
+set -sg escape-time 0
 
 # Set a decent history limit
 set -g history-limit 10000
