--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
 # improve colors
 set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",tmux-256color:Tc"
 
 # start with window at 1
 set -g base-index 1
