--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -98,7 +98,8 @@ tm_color_spotify=colour83
 
 #scripts
 tm_spotify="#[fg=$tm_color_spotify]#(osascript ~/.dotfiles/tmux/spotify.scpt)"
-tm_weather="#(ansiweather -l London,GB -u metric -s true -f 1 -a false | sed 's/London forecast => //')"
+tm_weather_ldn="#(ansiweather -l London,GB -u metric -s true -f 1 -a false | sed 's/London forecast => //')"
+tm_weather_nyc="#(ansiweather -l 5128581 -u metric -s true -f 1 -a false | sed 's/New York forecast => //')"
 
 # status line
 set -g status-justify left
@@ -114,7 +115,7 @@ setw -g window-status-current-format "#[fg=$tm_color_orange]#[bg=$tm_color_white
 set -g status-left "#[fg=$tm_color_blue] #S "
 # Info on right
 set -g status-right-length 150
-set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | #(TZ=America/New_York date +%%H:%%M) NYC | #(TZ=Europe/London date +%%H:%%M) LON |$tm_weather"
+set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | #(TZ=America/New_York date +%%H:%%M) NYC | #(TZ=Europe/London date +%%H:%%M) LON |$tm_weather_nyc"
 
 set-option -g set-titles on
 set-option -g set-titles-string "#{session_name} - #{host}"
