--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,26 +35,9 @@ bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-# act like vi
-# setw -g mode-keys vi
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
-
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
-
-# Shift vimkeys to switch windows
-bind -n M-S-h previous-window
-bind -n M-S-l next-window
-
-# Use Alt-vim keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
 
 # switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
@@ -75,13 +58,12 @@ bind p paste-buffer
 # bind-key -t vi-copy 'v' begin-selection
 # bind-key -t vi-copy 'y' copy-selection
 
-# http://unix.stackexchange.com/questions/26548/write-all-tmux-scrollback-to-a-file?newreg=7cee11daa36347119dd77b3400e6d0e2
-bind-key P command-prompt -p 'Save history to filename:' -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
+# http://unix.stackexchange.com/questions/26548/write-all-tmux-scrollback-to-a-file
+bind-key P command-prompt -p 'Save history to filename:' \
+  -I '~/tmux.history' 'capture-pane -S -32768 ; save-buffer %1 ; delete-buffer'
 
 # OSX Clipboard support
-# set-option -g default-command "reattach-to-user-namespace -l sh"
 set -g default-command "reattach-to-user-namespace -l $SHELL"
-# set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
 bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
 bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
@@ -98,8 +80,10 @@ tm_color_spotify=colour83
 
 #scripts
 tm_spotify="#[fg=$tm_color_spotify]#(osascript ~/.dotfiles/tmux/spotify.scpt)"
-tm_weather_ldn="#(ansiweather -l London,GB -u metric -s true -f 1 -a false | sed 's/London forecast => //')"
-tm_weather_nyc="#(ansiweather -l 5128581 -u metric -s true -f 1 -a false | sed 's/New York forecast => //')"
+tm_weather_ldn="#(ansiweather -l London,GB -u metric -s true -f 1 -a false \
+| sed 's/London forecast => //')"
+tm_weather_nyc="#(ansiweather -l 5128581 -u metric -s true -f 1 -a false \
+| sed 's/New York forecast => //')"
 
 # status line
 set -g status-justify left
@@ -108,14 +92,20 @@ set -g status-fg white
 set -g status-interval 4
 
 # window status
-setw -g window-status-format "#[fg=$tm_color_lightgray]#[bg=default] #I#[fg=$tm_color_lightgray]#[bg=default] #W "
-setw -g window-status-current-format "#[fg=$tm_color_orange]#[bg=$tm_color_white] #I#[fg=$tm_color_orange]#[bg=default] #W "
+setw -g window-status-format "#[fg=$tm_color_lightgray]#[bg=default]\
+#I#[fg=$tm_color_lightgray]#[bg=default] #W "
+setw -g window-status-current-format "#[fg=$tm_color_orange]#[bg=$tm_color_white]\
+ #I#[fg=$tm_color_orange]#[bg=default] #W "
 
 # Info on left (no session display)
 set -g status-left "#[fg=$tm_color_blue] #S "
 # Info on right
 set -g status-right-length 150
-set -g status-right "$tm_spotify#[fg=$tm_color_cream] | batt: #{battery_percentage} #{battery_remain} | #(TZ=America/New_York date +%%H:%%M) NYC | #(TZ=Europe/London date +%%H:%%M) LON |$tm_weather_nyc"
+set -g status-right "$tm_spotify#[fg=$tm_color_cream] \
+| batt: #{battery_percentage} #{battery_remain} \
+| #(TZ=America/New_York date +%%H:%%M) NYC \
+| #(TZ=Europe/London date +%%H:%%M) LON \
+|$tm_weather_nyc"
 
 set-option -g set-titles on
 set-option -g set-titles-string "#{session_name} - #{host}"
@@ -127,10 +117,11 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'wfxr/tmux-fzf-url'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @resurrect-strategy-vim 'session'
 # set -g @resurrect-save-shell-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
