--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # improve colors
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",tmux-256color:Tc"
 
 # start with window at 1
