--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,14 +76,27 @@ tm_color_cream=colour230
 tm_color_lightgray=colour244
 tm_color_gray=colour236
 tm_color_orange=colour215
+tm_color_gold=colour3
 tm_color_spotify=colour83
 
-#scripts
-tm_spotify="#[fg=$tm_color_spotify]#(osascript ~/.dotfiles/tmux/spotify.scpt)"
-tm_weather_ldn="#(ansiweather -l London,GB -u metric -s true -f 1 -a false \
-| sed 's/London forecast => //')"
-tm_weather_nyc="#(ansiweather -l 5128581 -u metric -s true -f 1 -a false \
-| sed 's/New York forecast => //')"
+# Scripts
+# -------------------
+
+# This prevents the aditional spacing caused by the presence/absence of battery_remain
+tm_battery="#[fg=$tm_color_gold]⚡ #[fg=$tm_color_cream]\
+#{?#{battery_remain},#{battery_percentage} #{battery_remain},#{battery_percentage}}"
+
+# If Spotify isn't open, we don't want to bother with the pipe or the green colour
+tm_spotify="#(osascript ~/.dotfiles/tmux/spotify.scpt)"
+tm_spotify_coloured="#{?$tm_spotify,#[fg=$tm_color_spotify]$tm_spotify#[fg=$tm_color_cream] |, }"
+
+# Get the weather in a specific location
+# Cache the location for 12 hours (43200 seconds)
+# Cache the weather for 10 minutes (600 seconds)
+tm_weather="#(cache-cli 600 ansiweather -l $(cache-cli 43200 curl -s ipinfo.io | \
+jq -r '. | [.city, .country] | join(\",\")' | \
+sed 's/ /%%20/') -u metric -s true -f 1 -a false \
+| grep forecast | sed 's/.* forecast => / /' | sed 's/^/|/')"
 
 # status line
 set -g status-justify left
@@ -99,13 +112,14 @@ setw -g window-status-current-format "#[fg=$tm_color_orange]#[bg=$tm_color_white
 
 # Info on left (no session display)
 set -g status-left "#[fg=$tm_color_blue] #S "
+
 # Info on right
 set -g status-right-length 150
-set -g status-right "$tm_spotify#[fg=$tm_color_cream] \
-| batt: #{battery_percentage} #{battery_remain} \
+set -g status-right "$tm_spotify_coloured \
+$tm_battery \
 | #(TZ=America/New_York date +%%H:%%M) NYC \
 | #(TZ=Europe/London date +%%H:%%M) LON \
-|$tm_weather_nyc"
+$tm_weather"
 
 set-option -g set-titles on
 set-option -g set-titles-string "#{session_name} - #{host}"
