fix(colors): stopped overwriting tmux colours accidentally

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,14 @@
-# improve colors
+# Use the xterm-256color terminal
 set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",tmux-256color:Tc"
+
+# Apply Tc
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # start with window at 1
 set -g base-index 1
 
 # renumber windows when one is closed
-set-option -g renumber-windows on
+set-option -g renumber-windows
 
 # start with pane at 1
 set -g pane-base-index 1
@@ -71,24 +73,24 @@ bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
 
 #colors
-tm_color_blue=colour4
-tm_color_cream=colour230
-tm_color_lightgray=colour244
-tm_color_gray=colour236
-tm_color_orange=colour215
-tm_color_gold=colour3
-tm_color_spotify=colour83
+tmcolour_blue=colour4
+tmcolour_cream=colour230
+tmcolour_lightgray=colour244
+tmcolour_gray=colour236
+tmcolour_orange=colour215
+tmcolour_gold=colour3
+tmcolour_spotify=colour83
 
 # Scripts
 # -------------------
 
 # This prevents the aditional spacing caused by the presence/absence of battery_remain
-tm_battery="#[fg=$tm_color_gold]⚡ #[fg=$tm_color_cream]\
+tm_battery="#[fg=$tmcolour_gold]⚡ #[fg=$tmcolour_cream]\
 #{?#{battery_remain},#{battery_percentage} #{battery_remain},#{battery_percentage}}"
 
 # If Spotify isn't open, we don't want to bother with the pipe or the green colour
 tm_spotify="#(osascript ~/.dotfiles/tmux/spotify.scpt)"
-tm_spotify_coloured="#{?$tm_spotify,#[fg=$tm_color_spotify]$tm_spotify#[fg=$tm_color_cream] |, }"
+tm_spotify_coloured="#{?$tm_spotify,#[fg=$tmcolour_spotify]$tm_spotify#[fg=$tmcolour_cream] |, }"
 
 # Get the weather in a specific location
 # Cache the location for 12 hours (43200 seconds)
@@ -105,13 +107,13 @@ set -g status-fg white
 set -g status-interval 4
 
 # window status
-setw -g window-status-format "#[fg=$tm_color_lightgray]#[bg=default]\
-#I#[fg=$tm_color_lightgray]#[bg=default] #W "
-setw -g window-status-current-format "#[fg=$tm_color_orange]#[bg=$tm_color_white]\
- #I#[fg=$tm_color_orange]#[bg=default] #W "
+setw -g window-status-format "#[fg=$tmcolour_lightgray]#[bg=default]\
+#I#[fg=$tmcolour_lightgray]#[bg=default] #W "
+setw -g window-status-current-format "#[fg=$tmcolour_orange]#[bg=$tmcolour_white]\
+ #I#[fg=$tmcolour_orange]#[bg=default] #W "
 
 # Info on left (no session display)
-set -g status-left "#[fg=$tm_color_blue] #S "
+set -g status-left "#[fg=$tmcolour_blue] #S "
 
 # Info on right
 set -g status-right-length 150
