fix: somehow tab complete stopped working

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,11 @@ unbind C-b
 set-option -g prefix C-s
 bind-key C-s send-prefix
 
+# My tab completion had stopped working inside tmux
+# and this fixes it.
+# https://bit.ly/2XKx81o
+unbind -n Tab
+
 # split panes using | and -
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
