--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,14 +1,13 @@
 {
+  "typescript.suggestionActions.enabled": false,
   "typescript.suggest.enabled": false,
   "typescript.validate.enable": false,
   "javascript.suggest.enabled": false,
   "javascript.validate.enable": false,
   "diagnostic.displayByAle": true,
-  "diagnostic.errorSign": "•",
-  "diagnostic.warningSign": "•",
-  "diagnostic.infoSign": "•",
+  "snippets.loadFromExtensions": true,
   "suggest.noselect": false,
-  "suggest.maxCompleteItemCount": 20,
+  "suggest.maxCompleteItemCount": 30,
   "languageserver": {
     "dockerfile": {
       "command": "docker-langserver",
