chore: all sorts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,6 +33,10 @@ bind-key C-s send-prefix
 # https://bit.ly/2XKx81o
 unbind -n Tab
 
+# move windows
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
 # split panes using | and -
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
@@ -88,10 +92,12 @@ tmcolour_spotify=colour83
 
 # Scripts
 # -------------------
-
+# https://fsymbols.com/signs/hazard/ lightning icon!
 # This prevents the aditional spacing caused by the presence/absence of battery_remain
-tm_battery="#[fg=$tmcolour_gold]⚡ #[fg=$tmcolour_cream]\
-#{?#{battery_remain},#{battery_percentage} #{battery_remain},#{battery_percentage}}"
+tm_battery="#[fg=$tmcolour_gold]ϟ#[fg=$tmcolour_cream] \
+	#{?#{battery_remain},\
+	#{battery_color_charge_fg}#{battery_percentage}#[default] #{battery_remain},\
+	#{battery_percentage}}"
 
 # If Spotify isn't open, we don't want to bother with the pipe or the green colour
 tm_spotify="#(osascript ~/.dotfiles/tmux/spotify.scpt)"
@@ -102,7 +108,7 @@ tm_spotify_coloured="#{?$tm_spotify,#[fg=$tmcolour_spotify]$tm_spotify#[fg=$tmco
 # Cache the weather for 10 minutes (600 seconds)
 tm_weather="#(cache-cli 600 ansiweather -l $(cache-cli 43200 curl -s ipinfo.io | \
 jq -r '. | [.city, .country] | join(\",\")' | \
-sed 's/ /%%20/') -u metric -s true -f 1 -a false \
+sed 's/ /%%20/') -u metric -s false -f 1 -a false \
 | grep forecast | sed 's/.* forecast => / /' | sed 's/^/|/')"
 
 # status line
@@ -122,14 +128,19 @@ set -g status-left "#[fg=$tmcolour_blue] #S "
 
 # Info on right
 set -g status-right-length 150
-set -g status-right "$tm_spotify_coloured \
+set -g status-right "#{prefix_highlight} $tm_spotify_coloured \
 $tm_battery \
 | #(TZ=America/New_York date +%%H:%%M) NYC \
 | #(TZ=Europe/London date +%%H:%%M) LON \
-$tm_weather"
+"
+# $tm_weather"
+# {weather}"
 
 set-option -g set-titles on
 set-option -g set-titles-string "#{session_name} - #{host}"
+
+# auto restore session on server start
+set -g @continuum-restore 'on'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -139,6 +150,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'dstokes/tmux-weather'
 
 set -g @resurrect-strategy-vim 'session'
 # set -g @resurrect-save-shell-history 'on'
