--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,4 +1,5 @@
 {
+  "suggest.echodocSupport": true,
   "typescript.suggestionActions.enabled": false,
   "typescript.suggest.enabled": false,
   "typescript.validate.enable": false,
@@ -6,9 +7,22 @@
   "javascript.validate.enable": false,
   "diagnostic.displayByAle": true,
   "snippets.loadFromExtensions": true,
+  "snippets.extends": {
+    "javascriptreact": ["javascript"],
+    "typescriptreact": ["javascript"],
+    "typescript": ["javascript"]
+  },
   "suggest.noselect": false,
   "suggest.maxCompleteItemCount": 30,
   "languageserver": {
+    /* "intelephense": { */
+    /*   "command": "intelephense", */
+    /*   "args": ["--stdio"], */
+    /*   "filetypes": ["php"], */
+    /*   "initializationOptions": { */
+    /*     "storagePath": "/tmp/intelephense" */
+    /*   } */
+    /* }, */
     "dockerfile": {
       "command": "docker-langserver",
       "filetypes": [
