style: some tmux status line colour changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -92,16 +92,20 @@ tmcolour_spotify=colour83
 
 # Scripts
 # -------------------
+set -g @batt_color_charge_secondary_tier2 '#ff0000'
+set -g @batt_color_charge_secondary_tier1 '#ff0000'
+set -g @batt_color_charge_primary_tier2 '#ff0000'
+set -g @batt_color_charge_primary_tier1 '#ff0000'
 # https://fsymbols.com/signs/hazard/ lightning icon!
 # This prevents the aditional spacing caused by the presence/absence of battery_remain
-tm_battery="#[fg=$tmcolour_gold]ϟ#[fg=$tmcolour_cream] \
+tm_battery="#[fg=$tmcolour_gold]ϟ#[default] \
 	#{?#{battery_remain},\
 	#{battery_color_charge_fg}#{battery_percentage}#[default] #{battery_remain},\
 	#{battery_percentage}}"
 
 # If Spotify isn't open, we don't want to bother with the pipe or the green colour
 tm_spotify="#(osascript ~/.dotfiles/tmux/spotify.scpt)"
-tm_spotify_coloured="#{?$tm_spotify,#[fg=$tmcolour_spotify]$tm_spotify#[fg=$tmcolour_cream] |, }"
+tm_spotify_coloured="#{?$tm_spotify,#[fg=$tmcolour_spotify]$tm_spotify#[default] |, }"
 
 # Get the weather in a specific location
 # Cache the location for 12 hours (43200 seconds)
