--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -9,7 +9,7 @@
       "expand": true
     }
   ],
-  "explorer.keyMappings": {
+  "explorer.keyMappings.global": {
     "<cr>": [
       "expanded?",
       "collapse",
