--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,7 +117,7 @@ sed 's/ /%%20/') -u metric -s false -f 1 -a false \
 
 # status line
 set -g status-justify left
-set -g status-bg default
+set -g status-bg black
 set -g status-fg white
 set -g status-interval 4
 
@@ -153,10 +153,10 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'wfxr/tmux-fzf-url'
+# set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'dstokes/tmux-weather'
+# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# set -g @plugin 'dstokes/tmux-weather'
 
 set -g @resurrect-strategy-vim 'session'
 # set -g @resurrect-save-shell-history 'on'
