feat: grab tokens from env

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
 prefix=${HOME}/.npm-packages
 progress=false
+@octaive:registry=https://npm.pkg.github.com/
+//npm.pkg.github.com/:_authToken=${TOKEN_OCTAIVE_GITHUB}
+//registry.npmjs.org/:_authToken=${TOKEN_NPM}
