--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,8 +34,10 @@ bind-key C-s send-prefix
 unbind -n Tab
 
 # move windows
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+# bind-key -n C-S-Left swap-window -t -1
+# bind-key -n C-S-Right swap-window -t +1
+bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
+bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
 
 # split panes using | and -
 bind | split-window -h -c "#{pane_current_path}"
