chore: change timezone for nyc in tmux status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -138,7 +138,7 @@ set -g status-right "#{prefix_highlight} $tm_spotify_coloured \
 $tm_battery \
 | #(TZ=America/New_York date +%%H:%%M) NYC \
 | #(TZ=Europe/London date +%%H:%%M) LON \
-| #(TZ=Europe/London date +%%d/%%m/%%Y) \
+| #(TZ=America/New_York date +%%d/%%m/%%Y) \
 "
 # $tm_weather"
 # {weather}"
